k8s/istio-system/envoy_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: grpc-web-filter
spec:
  workloadLabels:
    run: hello-backend
  filters:
  - listenerMatch:
      portNumber: 50066
      listenerType: SIDECAR_INBOUND # will match with the inbound listener for reviews:8080
      listenerProtocol: HTTP
    filterName: envoy.grpc_web
    filterType: HTTP
    filterConfig: {}
