k8s/istio-system/routerule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cors-for-testing
spec:
  hosts:
  - hello-backend
  http:
  - route:
    - destination:
        host: hello-backend
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - POST
        - PUT
        - DELETE
        - GET
        - OPTIONS
      allowHeaders:
        - keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
      exposeHeaders:
        - custom-header-1,grpc-status,grpc-message
      maxAge: 300s
      allowCredentials: true
